<resources>

  <string name="list_fragment_label">All Notes</string>
  <string name="title_hint">Title</string>
  <string name="description_hint">Description</string>
  <string name="details_fragment_label">Note Details</string>
  <string name="camera_permission_explanation">If permission to use camera is granted, images can be captured and attached to notes.</string>
  <string name="capture_directory">captures</string>
  <string name="edit_note_description">Edit note</string>
  <string name="add_photo_description">Add photo</string>
  <string name="cancel_changes_description">Cancel Changes</string>
  <string name="save_changes_description">Save Changes</string>
  <string name="add_note_description">Create new note</string>
  <string name="login_fragment_label">Sign in to Noted</string>
  <string name="sign_in_failure_message">Unable to sign in with provided credentials.</string>
  <string name="sign_out_title">Sign out</string>


  <string name="first_reminder_date"/>
  <string name="first_task_date"/>

  <string name="year_month_format">MMMM yyyy</string>
  <string name="settings_title">Settings</string>
  <string name="tasks_title">Tasks</string>
  <string name="reminder_title">Reminders</string>
  <string name="calendar_title">Calendar</string>

</resources>